K8s/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "game-2048"
  namespace: "game"
  labels:
    app: "frontend"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 5050
  selector:
    app: "frontend"
  type: "ClusterIP"
